# main

./: pyproject.toml
src/: masks.py  processing.py  widget.py
